[package]
name = "executable_path_finder"
version = "0.0.3"
edition = "2021"
description = "A utility library for finding executable paths"
readme = "README.md"
keywords = ["executable", "path", "finder", "filesystem", "utility"]
license = "MIT"
homepage = "https://github.com/washanhanzi/executable_path_finder"
repository = "https://github.com/washanhanzi/executable_path_finder"

[dependencies]
camino = "1.1.9"

[dev-dependencies]
tempfile = "3.12.0"
